// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/loading-indicator/LoadingIndicatorWrapper should allow custom classnames on wrapper 1`] = `
<div
  className="loading-indicator-wrapper test-name"
>
  <div>
    child
  </div>
  <div
    className="loading-indicator-veil is-with-center-crawler blur-content"
  >
    <LoadingIndicator
      size="default"
    />
  </div>
</div>
`;

exports[`components/loading-indicator/LoadingIndicatorWrapper should hide content 1`] = `
<div
  className="loading-indicator-wrapper test-name"
>
  <div />
  <div
    className="loading-indicator-veil is-with-center-crawler hide-content"
  >
    <LoadingIndicator
      size="default"
    />
  </div>
</div>
`;

exports[`components/loading-indicator/LoadingIndicatorWrapper should pass thru any rest properties 1`] = `
<div
  className="loading-indicator-wrapper test-name"
  data-resin-target="test"
>
  <div />
  <div
    className="loading-indicator-veil is-with-center-crawler blur-content"
  >
    <LoadingIndicator
      size="default"
    />
  </div>
</div>
`;

exports[`components/loading-indicator/LoadingIndicatorWrapper should render loader properly when specificed 1`] = `
<div
  className="loading-indicator-wrapper "
>
  <div>
    child
  </div>
  <div
    className="loading-indicator-veil is-with-center-crawler blur-content"
  >
    <LoadingIndicator
      size="default"
    />
  </div>
</div>
`;

exports[`components/loading-indicator/LoadingIndicatorWrapper should render with children in default properties 1`] = `
<div
  className="loading-indicator-wrapper "
>
  <div>
    child
  </div>
</div>
`;

exports[`components/loading-indicator/LoadingIndicatorWrapper should render with default properties intact 1`] = `
<div
  className="loading-indicator-wrapper "
>
  <div />
</div>
`;

exports[`components/loading-indicator/LoadingIndicatorWrapper should take in crawler position top 1`] = `
<div
  className="loading-indicator-wrapper test-name"
>
  <div>
    child
  </div>
  <div
    className="loading-indicator-veil is-with-top-crawler blur-content"
  >
    <LoadingIndicator
      size="default"
    />
  </div>
</div>
`;
